tests/this_annot_no_warnings/this_annot_no_warnings.exp
Error ----------------------------------------------------------------------------------------------------- test.js:18:5

Cannot define method `foo` [1] on `A` because `A` [2] is incompatible with number [3]. [incompatible-type]

   test.js:18:5
   18|     foo(this : number) : void
           ^^^ [1]

References:
   test.js:17:15
   17| declare class A {
                     ^ [2]
   test.js:18:16
   18|     foo(this : number) : void
                      ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:22:5

Cannot define method `foo` [1] on `B` because `B` [2] is incompatible with number [3]. [incompatible-type]

   test.js:22:5
   22|     foo(this : number) : void {}
           ^^^ [1]

References:
   test.js:21:7
   21| class B {
             ^ [2]
   test.js:22:16
   22|     foo(this : number) : void {}
                      ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:26:5

Cannot define method `foo` [1] on `C` because `C` [2] is incompatible with number [3]. [incompatible-type]

   test.js:26:5
   26|     foo(this : number) : void
           ^^^ [1]

References:
   test.js:25:11
   25| interface C {
                 ^ [2]
   test.js:26:16
   26|     foo(this : number) : void
                      ^^^^^^ [3]



Found 3 errors
